--- a/app/assets/stylesheets/decision.scss
+++ b/app/assets/stylesheets/decision.scss
@@ -22,7 +22,7 @@
     opacity: 0.54;
   }
 
-  &-footer {
+  &-body {
     margin: 10vh 10vw;
     max-width: 754px;
     font-family: "Roboto";
@@ -31,18 +31,16 @@
     display: flex;
     flex-direction: column;
 
-    form {
-      display: flex;
-      flex-direction: column;
-      row-gap: 10px;
-      width: 40%;
-      margin: 5vh 0;
-      align-self: center;
-    }
-
     .form_item {
       display: flex;
       justify-content: space-between;
+      margin-bottom: 10px;
+      row-gap: 10px;
+
+      .form__input {
+        width: 200px
+      }
+
 
       .button {
         all: unset;
@@ -67,73 +65,14 @@
   }
 }
 
-.game {
-  display: flex;
-  margin: 35px;
-  flex-direction: column;
-
-  &-title {
-    text-align: center;
-    font-family: 'Montserrat';
-    font-family: 21px;
-  }
-
-  &-body {
-    display: flex;;
-    flex-direction: row;
-    column-gap: 31px;
-  }
-
-  &-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 26px;
-    padding: 46px 88px;
-    transition: background-color 0.5s ease-in-out;
-
-
-    &:hover {
-      background-color: #f8f8f8;
-    }
-
-    &__img {
-      width: 63px;
-      height: 139px;
-    }
-
-    &__name {
-      text-align: center;
-      font-family: 'Montserrat';
-      color: #36006C;
-      font-size: 24px;
-    }
-  }
-}
-
-/*
-.background-modal {
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 1;
-  width: 100vw;
-  height: 100vh;
-  background: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-*/
-
 .modal {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
-  width: 492px;
-  height: 591px;
+  width: 400px;
+  height: 550px;
   background: white;
   box-shadow: 0px 0px 40px #0000001A;
   border-radius: 5px;
@@ -163,13 +102,8 @@
     color: tomato;
   }
 
-  &__image {
-    width: 70px;
-    height: 161px;
-    margin: 50px 0;
-  }
-
   &__button {
+    margin-top: 0;
     all: unset;
     width: 350px;
     height: 73px;
